--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                     University Student majoring in <strong>Data Visualization</strong> <br> 
                     Minoring in <strong>CSSE</strong> & <strong>Cybersecurity</strong>
                 </p>
-                <p class="sub-text">Focusing on the intersection of secure infrastructure and data-driven narratives.</p>
             </div>
             <div class="hero-image">
             <img src="me.jpg" alt="Dhanush Somayajulu">
@@ -37,7 +36,7 @@
 <section class="intro-section">
     <div class="container">
         <h2>About My Journey</h2>
-        <p>Currently a university student bridging the gap between aesthetics and technical infrastructure. I specialize in making complex data understandable while ensuring the systems behind them are robust and secure.</p>
+        <p>Currently a University student seeking to expand my skills by collaborating on complex projects.</p>
         
         <div class="info-grid">
             <div class="info-card">
