Refine project details and update tags
Updated project descriptions and tags for clarity.

--- a/projects.html
+++ b/projects.html
@@ -26,21 +26,21 @@
             
                 <a href="http://127.0.0.1:5500/index.html" target="_blank" rel="noopener noreferrer" class="project-link" style = "text-decoration: none; color: inherit;">
                     <div class="card">
-                        <div class="tag">Personal Portfolio Website</div>
+                        <div class="tag">Personal Website</div>
                         <h3>Portfolio</h3>
                         <p>Designed a website using HTML, CSS, and JS to introduce myself and to act as a Portfolio for my projects.</p>
                     </div>
                 </a>
                 <a href = "https://github.com/dhanush-s06?tab=repositories" target="_blank" rel="noopener noreferrer" class="project-link" style = "text-decoration: none; color: inherit;">
                     <div class="card">
-                        <div class="tag">CSSE</div>
+                        <div class="tag">Java & Python</div>
                         <h3>TicTacToe</h3>
                         <p>Created a TicTacToe game using Java libraries such as JFrame and JPanel. Acts just like a game popup window.</p>
                     </div>
                 </a>
                 <a href = "https://github.com/dhanush-s06?tab=repositories" target="_blank" rel="noopener noreferrer" class="project-link" style = "text-decoration: none; color: inherit;">
                     <div class="card">
-                        <div class="tag">CSSE</div>
+                        <div class="tag">Java and C++</div>
                         <h3>Space Invaders</h3>
                         <p>Using Java and its libraries, I created a classic and retro space invaders game.</p>
                     </div>
@@ -51,7 +51,7 @@
 
     <footer>
         <div class="container">
-            <p>Interested in working together?</p>
+            <p>Lets Connect</p>
             <div class="social-links">
                 <a href="https://github.com/dhanush-s06" target="_blank">GitHub</a>
                 <a href="https://www.linkedin.com/in/dhanush-somayajulu-54b706299/" target="_blank">LinkedIn</a>
@@ -62,3 +62,4 @@
 </body>
 
 </html>
+
