--- a/projects.html
+++ b/projects.html
@@ -28,21 +28,21 @@
                     <div class="card">
                         <div class="tag">Personal Website</div>
                         <h3>Portfolio</h3>
-                        <p>Designed a website using HTML, CSS, and JS to introduce myself and to act as a Portfolio for my projects.</p>
+                        <p>Using JavaScript, CSS, and HTML; I developed a website that covers info about myself, Dhanush Somayajulu.</p>
                     </div>
                 </a>
                 <a href = "https://github.com/dhanush-s06?tab=repositories" target="_blank" rel="noopener noreferrer" class="project-link" style = "text-decoration: none; color: inherit;">
                     <div class="card">
                         <div class="tag">Java & Python</div>
                         <h3>TicTacToe</h3>
-                        <p>Created a TicTacToe game using Java libraries such as JFrame and JPanel. Acts just like a game popup window.</p>
+                        <p>Created a TicTacToe game using Java libraries such as JFrame and JPanel.</p>
                     </div>
                 </a>
                 <a href = "https://github.com/dhanush-s06?tab=repositories" target="_blank" rel="noopener noreferrer" class="project-link" style = "text-decoration: none; color: inherit;">
                     <div class="card">
                         <div class="tag">Java and C++</div>
                         <h3>Space Invaders</h3>
-                        <p>Using Java and its libraries, I created a classic and retro space invaders game.</p>
+                        <p>Developed an arcade game using Java. There is an implementation in C++ as well.</p>
                     </div>
                 </a>
             </div> 
@@ -55,11 +55,12 @@
             <div class="social-links">
                 <a href="https://github.com/dhanush-s06" target="_blank">GitHub</a>
                 <a href="https://www.linkedin.com/in/dhanush-somayajulu-54b706299/" target="_blank">LinkedIn</a>
-                <a href="mailto:dhanush@live.com">Email Me</a>
+                <a href="mailto:dhanush@live.com">Gmail</a>
             </div>
         </div>
     </footer>
 </body>
 
 </html>
+
 
